[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/LikesDislikesSingleVarUI.gd" type="Script" id=1]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=2]

[node name="LikesDislikesSingleVarUI" type="HBoxContainer"]
margin_right = 1280.0
margin_bottom = 20.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = -1.0
margin_right = 250.0
margin_bottom = 24.4
rect_min_size = Vector2( 250, 0 )
text = "Anal sex"
clip_text = true

[node name="HatesButton" type="Button" parent="."]
margin_left = 253.0
margin_right = 364.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.470588, 0.588235, 1, 1 )
text = "Hates"

[node name="ReallyDislikesButton" type="Button" parent="."]
margin_left = 367.0
margin_right = 478.0
margin_bottom = 25.0
hint_tooltip = "Really dislikes"
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.470588, 0.588235, 1, 1 )
text = "---"

[node name="DislikesButton" type="Button" parent="."]
margin_left = 481.0
margin_right = 593.0
margin_bottom = 25.0
hint_tooltip = "Dislikes"
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.470588, 0.588235, 1, 1 )
text = "--"

[node name="SlightlyDislikesButton" type="Button" parent="."]
margin_left = 596.0
margin_right = 707.0
margin_bottom = 25.0
hint_tooltip = "Slightly dislikes"
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.470588, 0.588235, 1, 1 )
text = "-"

[node name="NeutralButton" type="Button" parent="."]
margin_left = 710.0
margin_right = 822.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.470588, 0.588235, 1, 1 )
text = "Neutral"

[node name="SlightlyLikesButton" type="Button" parent="."]
margin_left = 825.0
margin_right = 936.0
margin_bottom = 25.0
hint_tooltip = "Slightly likes"
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.470588, 0.588235, 1, 1 )
text = "+"

[node name="LikesButton" type="Button" parent="."]
margin_left = 939.0
margin_right = 1051.0
margin_bottom = 25.0
hint_tooltip = "Likes"
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.470588, 0.588235, 1, 1 )
text = "++"

[node name="ReallyLikesButton" type="Button" parent="."]
margin_left = 1054.0
margin_right = 1165.0
margin_bottom = 25.0
hint_tooltip = "Really likes"
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.470588, 0.588235, 1, 1 )
text = "+++"

[node name="LovesButton" type="Button" parent="."]
margin_left = 1168.0
margin_right = 1280.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.470588, 0.588235, 1, 1 )
text = "Loves"

[connection signal="pressed" from="HatesButton" to="." method="_on_HatesButton_pressed"]
[connection signal="pressed" from="ReallyDislikesButton" to="." method="_on_ReallyDislikesButton_pressed"]
[connection signal="pressed" from="DislikesButton" to="." method="_on_DislikesButton_pressed"]
[connection signal="pressed" from="SlightlyDislikesButton" to="." method="_on_SlightlyDislikesButton_pressed"]
[connection signal="pressed" from="NeutralButton" to="." method="_on_NeutralButton_pressed"]
[connection signal="pressed" from="SlightlyLikesButton" to="." method="_on_SlightlyLikesButton_pressed"]
[connection signal="pressed" from="LikesButton" to="." method="_on_LikesButton_pressed"]
[connection signal="pressed" from="ReallyLikesButton" to="." method="_on_ReallyLikesButton_pressed"]
[connection signal="pressed" from="LovesButton" to="." method="_on_LovesButton_pressed"]
